@@ -1,4 +1,4 @@
   meta:     1
   name:     scrub
   release:  1
-  version:  1.8
+  version:  1.9
